merge microbench into exJVM